# airline_test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
backend/: flight_data_generator.py  load_flight_data.py  query_flights_table.py
backend/app/: main.py
frontend/: index.html
frontend/static/: config.json  scripts.js
frontend/static/styles/: styles.css
infrastructure/cdk/: app.py  stack.py
