[tool.poetry]
name = "airline_test"
version = "0.1.0"
description = "Coding test set by ajaali consulting"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
boto3 = "^1.18.0"
aws-cdk-lib = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"